tests/typing/bad/testfile-arith-1.c
struct S { int a; };
int main() { struct S *s; s+s; }
